remove images, add Bacon Solver code

--- a/_posts/2018/2018-09-08-bacon-solver.ipynb
+++ b/_posts/2018/2018-09-08-bacon-solver.ipynb
@@ -33,7 +33,7 @@
     "![Graph of actors and films](https://www.cs.oberlin.edu/~asharp/cs151/labs/lab10/imdb.png)\n",
     "\n",
     "##### Side Note\n",
-    "The best option is to calculate and save (memoize) the Bacon number for all of the actors, possibly using Djikstra's algorithm. But that sort of detracts from the goal of this project, which is focusing on the breadth-first search algorithm."
+    "The implementation here is far from optimal. The best option is to calculate and save the Bacon number for all of the actors, possibly using Djikstra's algorithm. But that sort of detracts from the goal of this project, which is focusing on the breadth-first search algorithm."
    ]
   },
   {
@@ -47,9 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.display import Markdown,display\n",
@@ -119,7 +117,7 @@
      "output_type": "stream",
      "text": [
       "Bacon Number: 2\n",
-      "Path ['Ford, Harrison', 'Paranoia', 'Till, Lucas', 'X-Men: First Class', 'Bacon, Kevin']\n"
+      "Path ['Ford, Harrison', 'Cowboys & Aliens', 'Huss, Toby', 'R.I.P.D.', 'Bacon, Kevin']\n"
      ]
     },
     {
@@ -285,9 +283,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python3.6",
    "language": "python",
-   "name": "python3"
+   "name": "python3.6"
   },
   "language_info": {
    "codemirror_mode": {
@@ -299,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
