--- a/_posts/2018/2018-09-08-bacon-solver.ipynb
+++ b/_posts/2018/2018-09-08-bacon-solver.ipynb
@@ -1,6 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Bacon Solver With Breadth-First Search\"\n",
+    "date: \"2018-09-15 14:14:34\"\n",
+    "excerpt: A simple application of graph search algorithms\n",
+    "header:\n",
+    "  teaser: assets/img/stock-photos/bigs-HOLLYWOOD-sign-with-flowers-in-foreground-Los-Angeles-CA-e1-Large.png\n",
+    "  overlay_image: assets/img/stock-photos/bigs-HOLLYWOOD-sign-with-flowers-in-foreground-Los-Angeles-CA-e1-Large.png\n",
+    "  overlay_filter: 0.1\n",
+    "classes: wide\n",
+    "categories:\n",
+    "- software\n",
+    "tags:\n",
+    "- python\n",
+    "- data structures\n",
+    "- algorithms\n",
+    "---\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -47,7 +70,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from IPython.display import Markdown,display\n",
@@ -283,21 +308,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3.6",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3.6"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
